freelancer(ftc): fix homepage graphic size on mobile screen

--- a/playground/freelancer-foz/scss/partials/_main.scss
+++ b/playground/freelancer-foz/scss/partials/_main.scss
@@ -33,6 +33,7 @@
             margin-bottom: 60px;
 
             height: auto;
+            width: 100% !important;
 
             img
             {
